WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
145409
[Mac] occasional crash in MediaPlayerPrivateAVFoundationObjC::didStopLoadingRequest
https://bugs.webkit.org/show_bug.cgi?id=145409
Summary
[Mac] occasional crash in MediaPlayerPrivateAVFoundationObjC::didStopLoadingR...
Eric Carlson
Reported
2015-05-27 10:10:24 PDT
MediaPlayerPrivateAVFoundationObjC::didStopLoadingRequest sometimes crashes when called from MediaPlayerPrivateAVFoundationObjC::~ MediaPlayerPrivateAVFoundationObjC
Attachments
Proposed patch.
(1.29 KB, patch)
2015-05-27 10:14 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2015-05-27 10:10:52 PDT
<
rdar://problem/21121218
>
Eric Carlson
Comment 2
2015-05-27 10:14:43 PDT
Created
attachment 253791
[details]
Proposed patch. Speculative fix.
WebKit Commit Bot
Comment 3
2015-05-27 11:31:29 PDT
Comment on
attachment 253791
[details]
Proposed patch. Clearing flags on attachment: 253791 Committed
r184909
: <
http://trac.webkit.org/changeset/184909
>
WebKit Commit Bot
Comment 4
2015-05-27 11:31:32 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug