[Mac] occasional crash in MediaPlayerPrivateAVFoundationObjC::didStopLoadingRequest https://bugs.webkit.org/show_bug.cgi?id=145409

Reviewed by Dean Jackson.

* platform/graphics/avfoundation/objc/WebCoreAVFResourceLoader.mm:
(WebCore::WebCoreAVFResourceLoader::stopLoading): NULL-check m_avRequest.


Canonical link: https://commits.webkit.org/163421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@184909 268f45cc-cd09-0410-ab3c-d52691b4dbfc